--- a/portal/templates/flatpages/default.html
+++ b/portal/templates/flatpages/default.html
@@ -14,28 +14,30 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-light bg-info static-top">
             <div class="container">
-                <a class="navbar-brand" href="#">News Portal</a>
+                <a class="navbar-brand" href="/news/">News Portal</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive"
                         aria-controls="navbarResponsive" aria-expanded="false"
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <!-- <li class="nav-item active">
                             <a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
                             </a>
-                        </li>
-                        <li class="nav-item">
+                        </li> -->
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="/about/">About</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="/contacts/">Contact</a>
+                            <a class="nav-link" href="/news/search">Search</a>
+                        <li class="nav-item">
+                             <a class="nav-link" href="/news/create">Create a post</a>
                         </li>
                     </ul>
-                </div> -->
+                </div>
             </div>
         </nav>
         <!-- Page content-->
