--- a/portal/templates/flatpages/default.html
+++ b/portal/templates/flatpages/default.html
@@ -28,9 +28,9 @@
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li> -->
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="/about/">About</a>
-                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Personal page</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/news/search">Search</a>
                         <li class="nav-item">
